--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="keywords" content="техосмотр Саратов ТО Сафронов заводской пройти дешево станция диагностическая карта" />
     <title>Инкомстрой-ТО</title>
   </head>
   <body>
